2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	Document LT_VERSION_INFO rules.

	* configure.ac: Bump version number. Document LT_VERSION_INFO rules.

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.3 ===

	* NEWS: Updated for release 0.3.3

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	Use correct libtool version information (#509503).

	* configure.ac: Bump version number and correct LT_VERSION_INFO.

2008-01-14  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.2 ===

	* NEWS: Updated for release 0.3.2

2008-01-09  Mathias Hasselmann  <mathias@openismus.com>

	Build with latest gio version (#508272, Emilio Pozuelo Monfort).

	* libepc/publisher.c: Include <gio/gio.h> instead of
	<gio/gcontenttype.h>.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	Explictly add copyright statements to make licensecheck happy.
	Reported by Pedro Fragoso.

	* libepc/enums.c.in, libepc/enums.h.in, Makefile.am:
	Mark libepc/enums.[ch] and libepc/marshal.[ch] as generated.
	* tests/*: Explictly add LGPL header to test-cases.
	* examples/*: Put examples into public domain.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac: Bump version number.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.1 ===

	* NEWS: Updated for release 0.3.1

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Use proper gtk-doc syntax for linking to functions.

	* libepc/consumer.c, libepc/contents.c, libepc/dispatcher.c,
	libepc/protocol.c, libepc/publisher.c, libepc/service-info.c,
	libepc/service-monitor.c, libepc/service-type.c, libepc/shell.c,
	libepc/tls.c, libepc-ui/password-dialog.c,
	libepc-ui/progress-window.c: Use proper syntax.

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Document new functions and properties.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/dispatcher.c, libepc/publisher.c: Document "cookie"/