@@ -125,14 +125,6 @@ AM_CFLAGS = \
 	-DGDK_DISABLE_DEPRECATED=1 \
 	-DGTK_DISABLE_DEPRECATED=1
 
-if HAVE_AVAHI_UI_0_6_22
-AVAHI_UI_DEFINES = -DHAVE_AVAHI_UI_0_6_22=1
-else
-AVAHI_UI_DEFINES =
-endif
-
-LIBEPC_UI_CFLAGS += $(AVAHI_UI_DEFINES)
-
 libepc_libepc_1_0_la_CFLAGS			= $(AM_CFLAGS) $(LIBEPC_CFLAGS) -DGETTEXT_PACKAGE=\"libepc\" -DG_LOG_DOMAIN=\"libepc\"
 libepc_libepc_1_0_la_LDFLAGS			= $(LIBEPC_LIBS) -version-info $(LT_VERSION_INFO)
 
